plymouth test in

--- a/app/robots/iCubPlymouth01/CMakeLists.txt
+++ b/app/robots/iCubPlymouth01/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(appname iCubPlymouth01)
+set(appname iCubAberystwyth01)
 
 file(GLOB xml ${CMAKE_CURRENT_SOURCE_DIR}/*.xml)
 file(GLOB ini ${CMAKE_CURRENT_SOURCE_DIR}/*.ini)
