updated motorgui config file with correct name of yarp ports

--- a/app/robots/experimentalSetups/head_face-v3/yarpmotorgui.ini
+++ b/app/robots/experimentalSetups/head_face-v3/yarpmotorgui.ini
@@ -1,7 +1,7 @@
 //name of the robot          
 name icub      
 //parts to be opened by the GUI            
-parts (facev3 headv3)               
+parts (face head)               
  
 [facev3_zero]
 //                          0       1		2       3       4       5                       
