--- a/app/robots/iCubPlymouth01/camera/dragonfly2_config_left_bayer_320_240.ini
+++ b/app/robots/iCubPlymouth01/camera/dragonfly2_config_left_bayer_320_240.ini
@@ -16,6 +16,5 @@ gamma 0.4
 saturation 0.271
 framerate 30
 use_network_time 1
-#d 0
-guid 00b09d01008a1cfc
-
+d 1
+#guid <64bit global identifier, without the leading 0x> then remove the d option
