--- a/app/robots/iCubPlymouth01/camera/dragonfly2_config_right.ini
+++ b/app/robots/iCubPlymouth01/camera/dragonfly2_config_right.ini
@@ -3,18 +3,17 @@ subdevice dragonfly2
 width 320
 height 240
 video_type 1
-white_balance 0.514 0.610 
-gain 0.0
+white_balance 0.506 0.494 
+gain 0.312
 shutter 0.913
 name /icub/cam/right
 brightness 0
 DR2
-stamp
+stamp 
 sharpness 0.5
 hue 0.48
 gamma 0.4
-saturation 0.420
+saturation 0.271
 framerate 30
-#d 1
-guid 00b09d01008a1cf9
-
+d 1
+#guid <64bit global identifier, without the leading 0x> then remove the d option
