--- a/app/robots/iCubPlymouth01/camera/dragonfly2_config_right_bayer_320_240.ini
+++ b/app/robots/iCubPlymouth01/camera/dragonfly2_config_right_bayer_320_240.ini
@@ -1,7 +1,7 @@
 device grabber
-subdevice dragonfly2
-width 640
-height 480
+subdevice dragonfly2raw
+width 320
+height 240
 video_type 3
 white_balance 0.477 0.514
 gain 0.0
@@ -16,6 +16,5 @@ gamma 0.4
 saturation 0.271
 framerate 30
 use_network_time 1
-#d 1
-guid 00b09d01008a1cf9
-
+d 1
+#guid <64bit global identifier, without the leading 0x> then remove the d option
