--- a/app/cartesianSolver/conf/cartesianSolver.ini
+++ b/app/cartesianSolver/conf/cartesianSolver.ini
@@ -11,6 +11,7 @@ mode           shot
 verbosity      off
 maxIter        200
 tol            0.001
+constr_tol     0.000001
 interPoints    off
 ping_robot_tmo 40.0
  
@@ -26,7 +27,8 @@ pose           full
 mode           shot
 verbosity      off
 maxIter        200
-tol            0.001   
+tol            0.001
+constr_tol     0.000001
 interPoints    off
 ping_robot_tmo 40.0
 
@@ -42,7 +44,8 @@ pose           full
 mode           shot
 verbosity      off
 maxIter        200
-tol            0.001   
+tol            0.001
+constr_tol     0.000001   
 interPoints    off
 ping_robot_tmo 40.0
 
@@ -58,7 +61,8 @@ pose           full
 mode           shot
 verbosity      off
 maxIter        200
-tol            0.001   
+tol            0.001
+constr_tol     0.000001
 interPoints    off
 ping_robot_tmo 40.0
 
