[iCubHeidelberg01] adjusted calibration right leg, added cartesian configuration files

--- a/app/robots/iCubHeidelberg01/cartesianSolver.ini
+++ b/app/robots/iCubHeidelberg01/cartesianSolver.ini
@@ -1,7 +1,7 @@
 [left_leg]
 robot          icub
 name           cartesianSolver/left_leg
-type           left
+type           left_v2.5
 period         20
 dof            (1 1 1 1 1 1)
 rest_pos       (0.0 0.0 0.0 0.0 0.0 0.0)
@@ -18,7 +18,7 @@ ping_robot_tmo 40.0
 [right_leg]
 robot          icub
 name           cartesianSolver/right_leg
-type           right
+type           right_v2.5
 period         20
 dof            (1 1 1 1 1 1)
 rest_pos       (0.0 0.0 0.0 0.0 0.0 0.0)
