--- a/src/libraries/icubmod/embObjLib/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjLib/CMakeLists.txt
@@ -251,12 +251,13 @@ set(embobj_header           ${BODY_COMMON_SOURCE}
 SOURCE_GROUP("EmbObj Source Files" FILES ${embobj_source})
 SOURCE_GROUP("EmbObj Header Files" FILES ${embobj_header})
 
+include_directories(SYSTEM ${ACE_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS} ${FIRMWARE_SHARED_INC})
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ${embObj_includes}
                     ${iCubDev_INCLUDE_DIRS}
-                    ${YARP_INCLUDE_DIRS}
-                    ${CMAKE_CURRENT_SOURCE_DIR}/../motionControlLib/
-                    ${FIRMWARE_SHARED_INC})
+                    ${CMAKE_CURRENT_SOURCE_DIR}/../motionControlLib/)
+
 
 add_library(${PROJECTNAME} ${embobj_source} ${embobj_header})
 
