--- a/src/libraries/icubmod/embObjMotionControl/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjMotionControl/CMakeLists.txt
@@ -18,7 +18,9 @@ yarp_prepare_device(embObjMotionControl TYPE yarp::dev::embObjMotionControl
 
   set(ICUB_COMPILE_EMBOBJ_LIBRARY ON CACHE INTERNAL "use the embObjLib lib")
   INCLUDE(../embObjLib/embObjLib.cmake)
-  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${YARP_INCLUDE_DIRS} ${iCubDev_INCLUDE_DIRS} )
+  
+  INCLUDE_DIRECTORIES(SYSTEM ${YARP_INCLUDE_DIRS} ${ACE_INCLUDE_DIRS})
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${iCubDev_INCLUDE_DIRS})
 
 #    yarp_add_plugin(embObjMotionControl embObjMotionControl.cpp embObjMotionControl.h usrcbk/eOcfg_nvsEP_mc_usrcbk_pippo.c )
     yarp_add_plugin(embObjMotionControl embObjMotionControl.cpp embObjMotionControl.h)
