--- a/src/core/iCubInterface/CMakeLists.txt
+++ b/src/core/iCubInterface/CMakeLists.txt
@@ -17,25 +17,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../tools/canLoader/canLoaderL
                     ${iCubDev_INCLUDE_DIRS}
                     ${YARP_INCLUDE_DIRS})
 
-if(ICUB_USE_INTERFACEGUI)
-	add_definitions(-D_USE_INTERFACEGUI)
-	include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libraries/iCubInterfaceGuiLib)
-endif(ICUB_USE_INTERFACEGUI)
-
 ADD_EXECUTABLE(iCubInterface ${folder_source} ${folder_header})
-
-
-
-if(ICUB_USE_INTERFACEGUI)
-    TARGET_LINK_LIBRARIES(iCubInterface iCubDev 
-                                    ${YARP_LIBRARIES}
-                                    canLoaderLib 
-                                    iCubInterfaceGuiLib)
-else()
-    TARGET_LINK_LIBRARIES(iCubInterface iCubDev 
-                                    ${YARP_LIBRARIES}
-                                    canLoaderLib)
-endif()
-
+TARGET_LINK_LIBRARIES(iCubInterface iCubDev ${YARP_LIBRARIES} canLoaderLib)
 INSTALL(TARGETS iCubInterface DESTINATION bin COMPONENT Core)
 
