[iKinGazeCtrl]: it seems that the simulator head can be better driven in velocity rather than position direct... must be related to PIDs gains.

--- a/app/iKinGazeCtrl/conf/configSim.ini
+++ b/app/iKinGazeCtrl/conf/configSim.ini
@@ -1,5 +1,6 @@
-robot     icubSim
-saccades  off
+robot                 icubSim
+neck_position_control off
+saccades              off
 
 [cameras]
 context   cameraCalibration
