Import fixes for Qt5 from YARP
See also: robotology/yarp@4fef4af4d02637d09205d2cc7194828ce27ce1b0

--- a/src/tools/frameGrabberGui2-qt/CMakeLists.txt
+++ b/src/tools/frameGrabberGui2-qt/CMakeLists.txt
@@ -45,8 +45,8 @@ add_executable(frameGrabberGui2-qt WIN32 ${frameGrabberGui2_qt_SRCS}
 target_link_libraries(frameGrabberGui2-qt YARP::YARP_OS
                                           YARP::YARP_init
                                           YARP::YARP_dev)
-qt5_use_modules(frameGrabberGui2-qt Widgets
-                                    Concurrent)
+qticub_use_modules(frameGrabberGui2-qt Widgets
+                                       Concurrent)
 qticub_deprecate_with_cmake_version(2.8.11)
 if(WIN32 AND CMAKE_VERSION VERSION_LESS 2.8.11)
   target_link_libraries(frameGrabberGui2-qt Qt5::WinMain)
