--- a/src/tools/skinManagerGui-qt/CMakeLists.txt
+++ b/src/tools/skinManagerGui-qt/CMakeLists.txt
@@ -44,7 +44,8 @@ target_link_libraries(skinManagerGui-qt YARP::YARP_OS
                                         YARP::YARP_sig
                                         skinDynLib)
 
-qt5_use_modules(skinManagerGui-qt Widgets PrintSupport)
+qticub_use_modules(skinManagerGui-qt Widgets
+                                     PrintSupport)
 qticub_deprecate_with_cmake_version(2.8.11)
 if(WIN32 AND CMAKE_VERSION VERSION_LESS 2.8.11)
   target_link_libraries(skinManagerGui-qt Qt5::WinMain)
