--- a/app/robots/iCubGrenoble01/camera/dragonfly2_config_left.ini
+++ b/app/robots/iCubGrenoble01/camera/dragonfly2_config_left.ini
@@ -15,5 +15,7 @@ hue 0.48
 gamma 0.4
 saturation 0.271
 framerate 30
-d 0
+#d 0
 #guid <64bit global identifier, without the leading 0x> then remove the d option
+#guid B09D01009B5715
+file left_GUID.ini
