--- a/app/robots/iCubGrenoble01/camera/dragonfly2_config_right.ini
+++ b/app/robots/iCubGrenoble01/camera/dragonfly2_config_right.ini
@@ -15,5 +15,7 @@ hue 0.48
 gamma 0.4
 saturation 0.271
 framerate 30
-d 1
+#d 1
 #guid <64bit global identifier, without the leading 0x> then remove the d option
+#guid B09D01009DA729
+file right_GUID.ini
