--- a/app/joystickCtrl/conf/cer_win.ini
+++ b/app/joystickCtrl/conf/cer_win.ini
@@ -8,9 +8,11 @@ outputPortName          /joystickCtrl:o
 [INPUTS]
 InputsNumber    5
 Reverse         0       0       0       0       0      
-Gain            +1.0    -1.0    +2.0    +1.0    +1.0    
-Max             +32000  +32000  +65000  +32000  +32000 
-Min             -32000  -32000  0      -32000  -32000  
+Gain           +1.0    -1.0    +2.0    +1.0    +1.0    
+InputMax       +32000  +32000  +65000  +32000 +32000 
+InputMin       -32000  -32000  0      -32000  -32000  
+OutputMax	    +100    +100    +100    0       +100
+OutputMin       -100    -100    0       0       -100
 Offset          1       1       1       1       1
 Deadband        6000    6000    6000    6000    6000
 
