[depth2kin]: changed elas parameter for a better stereo reconstruction /cc @GiuliaP @Tobias-Fischer

--- a/app/depth2kin/scripts/depth2kin.xml.template
+++ b/app/depth2kin/scripts/depth2kin.xml.template
@@ -11,7 +11,7 @@
       
         <module>
                 <name>SFM</name>
-                <parameters></parameters>
+                <parameters>--elas_ipol_gap_width 20</parameters>
                 <node>gpu-node</node>
                 <tag>structFromMotion</tag>
         </module>
