CER-wrist XML setup updated: now includes 3 joints (tripod) and all the motion control parameters are tuned to work with the conversion of meters in ticks (not deg to iCubDegrees)

--- a/app/robots/experimentalSetups/mc4plus-CER_wrist/yarpmotorgui.ini
+++ b/app/robots/experimentalSetups/mc4plus-CER_wrist/yarpmotorgui.ini
@@ -4,15 +4,9 @@ name icub
 parts (mc4plusCER-joint)               
  
 [mc4plusCER-joint_zero]                       
-PositionZero                0                          
-VelocityZero                20
-                          
-;[mc4plusCER-joint_calib]
-;CalibrationType		    0
-;Calibration1		        250.0
-;Calibration2		        10.0
-;Calibration3	            0.0		    
- 
+PositionZero                0.06    0.06    0.06                
+VelocityZero                0.01    0.01    0.01
+                           
 //DO NOT REMOVE THIS LINE    
  
  
