--- a/src/simulators/iCubSimulation/CMakeLists.txt
+++ b/src/simulators/iCubSimulation/CMakeLists.txt
@@ -87,10 +87,8 @@ ELSE ()
    ADD_DEFINITIONS(-DOMIT_LOGPOLAR)
 ENDIF ()
 
-if(MSVC)
-  add_definitions(-D_USE_MATH_DEFINES)
-endif()
-
+# import math symbols from standard cmath
+add_definitions(-D_USE_MATH_DEFINES)
 ADD_EXECUTABLE(${PROJECTNAME} ${folder_source} ${folder_header})
 
 TARGET_LINK_LIBRARIES(${PROJECTNAME} ${YARP_LIBRARIES} iKin)
