--- a/src/libraries/optimization/CMakeLists.txt
+++ b/src/libraries/optimization/CMakeLists.txt
@@ -23,11 +23,8 @@ include_directories(${PROJECT_SOURCE_DIR}/include
                     ${IPOPT_INCLUDE_DIRS}
                     ${YARP_INCLUDE_DIRS})
 
-add_definitions(${IPOPT_DEFINITIONS})
-if(MSVC)
-  add_definitions(-D_USE_MATH_DEFINES)
-endif()
-
+# import math symbols from standard cmath
+add_definitions(${IPOPT_DEFINITIONS} -D_USE_MATH_DEFINES)
 add_library(${PROJECTNAME} ${folder_source} ${folder_header})
 
 set_property(TARGET ${PROJECTNAME} APPEND_STRING PROPERTY LINK_FLAGS " ${IPOPT_LINK_FLAGS}")
