CER-wrist XML files updated to latest version: PID params tuned and minor fixes

--- a/app/robots/experimentalSetups/mc4plus-CER_wrist/yarpmotorgui.ini
+++ b/app/robots/experimentalSetups/mc4plus-CER_wrist/yarpmotorgui.ini
@@ -1,7 +1,7 @@
 //name of the robot          
 name icub      
 //parts to be opened by the GUI            
-parts (mc4plusCER-joint)               
+parts (mc4plusCERwrist-elongations)               
  
 [mc4plusCER-joint_zero]                       
 PositionZero                0.06    0.06    0.06                
