added trajectoryPlayer tool

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(simpleClient)
 add_subdirectory(testStereoMatch)
 add_subdirectory(fingersTuner)
 add_subdirectory(imuFilter)
+add_subdirectory(trajectoryPlayer)
 add_subdirectory(embObjProtoTools/boardTransceiver)
 
 #canLoader needs GtkPlus, but it contains a library needed by other modules
