--- a/app/robots/iCubLausanne01/camera/dragonfly2_config_left.ini
+++ b/app/robots/iCubLausanne01/camera/dragonfly2_config_left.ini
@@ -16,4 +16,5 @@ gamma 0.4
 saturation 0.271
 framerate 30
 d 0
+guid 00b09d01007ad6a1
 #guid <64bit global identifier, without the leading 0x> then remove the d option
