--- a/app/robots/iCubLausanne01/camera/dragonfly2_config_left_bayer_640_480.ini
+++ b/app/robots/iCubLausanne01/camera/dragonfly2_config_left_bayer_640_480.ini
@@ -17,4 +17,5 @@ saturation 0.271
 framerate 30
 use_network_time 1
 d 0
+guid 00b09d01007ad6a1
 #guid <64bit global identifier, without the leading 0x> then remove the d option
