--- a/app/robots/iCubLausanne01/camera/dragonfly2_config_right_bayer_320_240.ini
+++ b/app/robots/iCubLausanne01/camera/dragonfly2_config_right_bayer_320_240.ini
@@ -17,4 +17,5 @@ saturation 0.271
 framerate 30
 use_network_time 1
 d 1
+guid 00b09d010070eda5
 #guid <64bit global identifier, without the leading 0x> then remove the d option
