--- a/app/simConfig/conf/Sim_head.ini
+++ b/app/simConfig/conf/Sim_head.ini
@@ -17,8 +17,8 @@ Encoder 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533
 ///other stuff like limitations torque and speed
 					
 [LIMITS]			 
-Max  30  60  55  15  52 90
-Min -40 -70 -55 -35 -50 -0
+jntPosMax  30  60  55  15  52 90
+jntPosMin -40 -70 -55 -35 -50 -0
 											 
 error_tol 1 1 1 1 1 1
 
