--- a/app/simConfig/conf/Sim_left_leg.ini
+++ b/app/simConfig/conf/Sim_left_leg.ini
@@ -17,8 +17,8 @@ Encoder 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533
 ///other stuff like limitations torque and speed
 					
 [LIMITS]			 
-Max  90  90  78  15 44 22
-Min -30 -0 -80 -125 -20 -22
+jntPosMax  90  90  78  15 44 22
+jntPosMin -30 -0 -80 -125 -20 -22
 											 
 error_tol 1 1 1 1 1 1
 
