--- a/app/simConfig/conf/Sim_right_arm.ini
+++ b/app/simConfig/conf/Sim_right_arm.ini
@@ -17,8 +17,8 @@ Encoder 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.
 ///other stuff like limitations torque and speed
 					
 [LIMITS]			 
-Max     10   160.8     80     106      90       0     40      60    90      90      180       90       180     90      180   270
-Min    -95    	 0     -37    15.5     -90     -90    -20      0    10       0        0        0         0      0        0     0     
+jntPosMax     10   160.8     80     106      90       0     40      60    90      90      180       90       180     90      180   270
+jntPosMin    -95    	 0     -37    15.5     -90     -90    -20      0    10       0        0        0         0      0        0     0     
 											 
 error_tol 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 
 
