--- a/app/simConfig/conf/Sim_torso.ini
+++ b/app/simConfig/conf/Sim_torso.ini
@@ -17,8 +17,8 @@ Encoder 0.0174533 0.0174533 0.0174533
 ///other stuff like limitations torque and speed
 					
 [LIMITS]			 
-Max  50  30  70
-Min -50 -30 -10
+jntPosMax  50  30  70
+jntPosMin -50 -30 -10
 											 
 error_tol 1 1 1
 
