--- a/app/robots/iCubSheffield01/CMakeLists.txt
+++ b/app/robots/iCubSheffield01/CMakeLists.txt
@@ -1,12 +1,11 @@
 set(appname iCubSheffield01)
 
-file(GLOB xml ${CMAKE_CURRENT_SOURCE_DIR}/*.xml)
-file(GLOB ini ${CMAKE_CURRENT_SOURCE_DIR}/*.ini)
+set(scripts icub_all.xml icub_all_inertials.xml robotInterface.ini general.xml)
 
-yarp_install(FILES ${xml} DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname})
-yarp_install(FILES ${ini} DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname})
+yarp_install(FILES ${scripts} DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname})
 yarp_install(DIRECTORY calibrators DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE)  
 yarp_install(DIRECTORY cartesian DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE)
 yarp_install(DIRECTORY wrappers DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE)
-yarp_install(DIRECTORY hardware DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE)
-yarp_install(DIRECTORY camera DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE) 
+yarp_install(DIRECTORY hardware DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE) 
+
+
