ImageSplitter: introduced module to split up a dual image into 2 single images
works with dual images horizontally or vertically aligned.
It implements different ways of copying the images to test performances.

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(simpleClient)
 add_subdirectory(testStereoMatch)
 add_subdirectory(fingersTuner)
 add_subdirectory(imuFilter)
+add_subdirectory(imageSplitter)
 add_subdirectory(trajectoryPlayer)
 add_subdirectory(embObjProtoTools/boardTransceiver)
 
