new repo for sheffield01

--- a/app/robots/iCubSheffield01/CMakeLists.txt
+++ b/app/robots/iCubSheffield01/CMakeLists.txt
@@ -1,11 +1,12 @@
 set(appname iCubSheffield01)
 
-set(scripts icub_all.xml icub_all_inertials.xml robotInterface.ini general.xml)
+set(scripts icub_all.xml robotInterface.ini general.xml iKinGazeCtrl.ini icubEyes.ini)
 
 yarp_install(FILES ${scripts} DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname})
 yarp_install(DIRECTORY calibrators DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE)  
 yarp_install(DIRECTORY cartesian DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE)
 yarp_install(DIRECTORY wrappers DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE)
 yarp_install(DIRECTORY hardware DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE) 
+yarp_install(DIRECTORY camera DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE) 
 
 
