Revert "Do not try to install empty lists of files"
This reverts commit 79fb05288ff0fe6d60c8ed6baf31c57b6e25740a.

This was fixed in
robotology/yarp@7f5312e6d8feb2fbed434e3989754ccdb7d3d9b2

--- a/app/default/CMakeLists.txt
+++ b/app/default/CMakeLists.txt
@@ -4,8 +4,10 @@
 
 set(appname default)
 
-#file(GLOB conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini)
+file(GLOB conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini)
 file(GLOB scripts ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*.template)
 
-#yarp_install(FILES ${conf} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
+yarp_install(FILES ${conf} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
 yarp_install(FILES ${scripts} DESTINATION ${ICUB_APPLICATIONS_TEMPLATES_INSTALL_DIR})
+                
+
