--- a/app/robots/experimentalSetups/laserRPLidar/serial.ini
+++ b/app/robots/experimentalSetups/laserRPLidar/serial.ini
@@ -2,7 +2,7 @@
 
 verbose 4
 comport COM4  //windows
-//comport /dev/ttyACM0 //linux
+//comport /dev/ttyUSB0 //linux
 baudrate 115200
 xonlim 0
 xofflim 0
