minor cfg update

--- a/app/robots/experimentalSetups/laserRPLidar/serial.ini
+++ b/app/robots/experimentalSetups/laserRPLidar/serial.ini
@@ -1,8 +1,8 @@
 /// configuration file for iKart serial port
 
 verbose 4
-comport COM4  //windows
-//comport /dev/ttyUSB0 //linux
+//comport COM4  //windows
+comport /dev/ttyUSB0 //linux
 baudrate 115200
 xonlim 0
 xofflim 0
