added embObjStrain, embObjMais, embObjIntertials.

--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -64,6 +64,9 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(embObjMotionControl)
   add_subdirectory(embObjSkin)
   add_subdirectory(embObjAnalog)
+  add_subdirectory(embObjStrain)
+  add_subdirectory(embObjMais)
+  add_subdirectory(embObjInertials)
   add_subdirectory(embObjVirtualAnalogSensor)
   add_subdirectory(usbCamera)
   add_subdirectory(imuST_M1)
