[fingersTuner]: added possibility to put coupled joints in idle

--- a/app/fingersTuner/conf/config.ini
+++ b/app/fingersTuner/conf/config.ini
@@ -17,23 +17,23 @@ alias_6           (tag all)    (joints (9 10 11 12 13 14 15))
 
 [left_hand]
 device            left_arm
-joint_8           (encs_ratio 17.50) (status download)
-joint_9           (encs_ratio -2.10) (status download)
+joint_8           (encs_ratio 17.50) (status download) (idling (9 10))
+joint_9           (encs_ratio -2.10) (status download) (idling (10))
 joint_10          (encs_ratio -2.36) (status download)
-joint_11          (encs_ratio -2.58) (status download)
+joint_11          (encs_ratio -2.58) (status download) (idling (12))
 joint_12          (encs_ratio -2.32) (status download)
-joint_13          (encs_ratio -2.10) (status download)
+joint_13          (encs_ratio -2.10) (status download) (idling (14))
 joint_14          (encs_ratio -2.57) (status download)
 joint_15          (encs_ratio -1.70) (status download)
 
 [right_hand]
 device            right_arm
-joint_8           (encs_ratio 17.50) (status download)
-joint_9           (encs_ratio -2.10) (status download)
+joint_8           (encs_ratio 17.50) (status download) (idling (9 10))
+joint_9           (encs_ratio -2.10) (status download) (idling (10))
 joint_10          (encs_ratio -2.36) (status download)
-joint_11          (encs_ratio -2.58) (status download)
+joint_11          (encs_ratio -2.58) (status download) (idling (12))
 joint_12          (encs_ratio -2.32) (status download)
-joint_13          (encs_ratio -2.10) (status download)
+joint_13          (encs_ratio -2.10) (status download) (idling (14))
 joint_14          (encs_ratio -2.57) (status download)
 joint_15          (encs_ratio -1.70) (status download)
 
