updated armV3 config files

--- a/app/robots/experimentalSetups/arm-v3/yarpmotorgui.ini
+++ b/app/robots/experimentalSetups/arm-v3/yarpmotorgui.ini
@@ -1,9 +1,9 @@
 //name of the robot          
 name icub      
 //parts to be opened by the GUI            
-parts (armv3)               
+parts (left_arm)               
  
-[armv3_zero]
+[left_arm_zero]
 //                          0       1		2       3                                     
 PositionZero                0		0		0     	0                                      
 VelocityZero                20		20		20   	20
