adapted serviceParser to use strings equal to the relevant types defined in EoBoards.h EoAnalogSensors.h EoManagement.h. tested again in linux w/ single eobrd_ems, eobrd_mais and eobrd_mtb boards.

--- a/src/libraries/icubmod/embObjLib/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjLib/CMakeLists.txt
@@ -59,6 +59,9 @@ set(ICUB_INTERFACE_SOURCE   ${EXTRA_FOLDER}/FeatureInterface.cpp)
 set(NVS_SOURCE              ${NVS_MC_SRC_FOLDER}/EoProtocol.c
                             ${NVS_MC_SRC_FOLDER}/EoProtocolEPs.c
                             ${PROT_FOLDER}/icub/EoError.c
+                            ${PROT_FOLDER}/icub/EoBoards.c
+                            ${PROT_FOLDER}/icub/EoAnalogSensors.c
+                            ${PROT_FOLDER}/icub/EoManagement.c
                             )
  
     
