robotInterface.ini files changed into yarprobotinterface.ini

--- a/app/iCubStartup/scripts/iCubStartup.xml.template
+++ b/app/iCubStartup/scripts/iCubStartup.xml.template
@@ -12,7 +12,7 @@
 
 
         <module>
-                <name>robotInterface</name>
+                <name>yarprobotinterface</name>
                 <node>pc104</node>
         </module>
 
