fixed missing parameters

--- a/app/joystickCtrl/conf/cer_win.ini
+++ b/app/joystickCtrl/conf/cer_win.ini
@@ -7,14 +7,14 @@ outputPortName          /joystickCtrl:o
 
 [INPUTS]
 InputsNumber    5
-Reverse         0       0       0       0       0      
-Gain           +1.0    -1.0    +2.0    +1.0    +1.0    
-InputMax       +32000  +32000  +65000  +32000 +32000 
-InputMin       -32000  -32000  0      -32000  -32000  
-OutputMax	    +100    +100    +100    0       +100
-OutputMin       -100    -100    0       0       -100
-Offset          1       1       1       1       1
-Deadband        6000    6000    6000    6000    6000
+Reverse         0       0       0       0       0           
+Gain           +1.0    -1.0    +2.0    +1.0    +1.0      
+InputMax       +32000  +32000  +65000  +32000 +32000   
+InputMin       -32000  -32000  0      -32000  -32000    
+OutputMax       +100    +100    +100    0       +50     
+OutputMin       -100    -100    0       0       -50       
+Offset          1       1       1       1       1          
+Deadband        6000    6000    6000    6000    6000    
 
 [OUTPUTS]
 OutputsNumber       5
@@ -26,5 +26,6 @@ Ax4 cartesian_xyz   2
 
 //Important:  you can execute only one-word commands or scripts
 [BUTTONS_EXECUTE]
-button0  script0.sh
-button1  script1.sh
+button0  C:\\software\\hap.bat
+button1  C:\\software\\sad.bat
+button2  C:\\software\\warn.bat
