Fix iCub_SIM cmake generation with VS2010 x64

--- a/src/simulators/iCubSimulation/CMakeLists.txt
+++ b/src/simulators/iCubSimulation/CMakeLists.txt
@@ -5,7 +5,7 @@
 SET(PROJECTNAME iCub_SIM)
 
 IF (MSVC)
-set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} " /STACK:3145728")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /STACK:3145728")
 ENDIF ()
 
 PROJECT(${PROJECTNAME})
