improved joystcick control for cer

--- a/app/joystickCtrl/conf/cer_linux.ini
+++ b/app/joystickCtrl/conf/cer_linux.ini
@@ -6,24 +6,33 @@ DefaultJoystickNumber   0
 outputPortName          /joystickCtrl:o
 
 [INPUTS]
-InputsNumber    6
-Reverse         0       0       0       0       0       0       
-Gain            +1.0     1.0    +0.5    +1.0    +1.0     +1.0    
-InputMax    	+32000  +32000  +32000  0       0       +32000 
-InputMin        -32000  -32000  -32000  0       0       0     
-OutputMax       +100    +100    -100    0       0       +100    
-OutputMin       -100    -100    +100    0       0       0       
-Deadband        6000    6000    6000    6000    6000    6000   
+InputsNumber    8
+Reverse         0       0       0       0       0       0          0         0
+Gain            +1.0     1.0    +0.5    +1.0    +1.0     +1.0      +1.0      +1.0
+InputMax    	+32000  +32000  +32000  +32000  +32000  +32000     +32000    +32000
+InputMin        -32000  -32000  -32000  -32000  -32000  0          -32000    -32000
+OutputMax       +100    +100    -100    -100    +100    +100       +100      -100
+OutputMin       -100    -100    +100    +100    -100    0          -100      +100
+Deadband        6000    6000    6000    6000    6000    6000       6000      6000
 
 [OUTPUTS]
-OutputsNumber       5
+OutputsNumber       10
 Ax0 constant        1
-Ax1 polar_r_theta   0 1 0
-Ax2 polar_r_theta   0 1 1
+Ax1 constant        0
+Ax2 cartesian_xyz   1
 Ax3 cartesian_xyz   2
 Ax4 cartesian_xyz   5
+Ax5 cartesian_xyz   3
+Ax6 cartesian_xyz   4
+Ax7 cartesian_xyz   6
+Ax8 cartesian_xyz   7
+Ax9 cartesian_xyz   0
+
 
 //Important:  you can execute only one-word commands or scripts
 [BUTTONS_EXECUTE]
-button0  ikart_motors_idle.sh
-button1  ikart_motors_run.sh
+button0  ~/cer_motors_idle.sh
+button1  ~/cer_motors_run.sh
+button2  ~/face1.sh
+button3  ~/face2.sh
+
