changed CMakeLists.txt of ethLoader and canLoader so that: if ICUB_USE_icub_firmware_shared is false they both dont compile.

--- a/src/tools/canLoader/CMakeLists.txt
+++ b/src/tools/canLoader/CMakeLists.txt
@@ -2,21 +2,24 @@
 # Authors: Lorenzo Natale
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-PROJECT(canLoader)
+project(canLoader)
 
-
-if(${icub_firmware_shared_FOUND})
-    message(STATUS " +++ tool compiling canLoaderLib")
-
-ADD_SUBDIRECTORY(canLoaderLib)
-ADD_SUBDIRECTORY(canLoader-console)
-
-if(ICUB_USE_GTK2)
-    ADD_SUBDIRECTORY(canLoader)
-else(ICUB_USE_GTK2)
-    message(STATUS "GTK2 not selected, skipping canLoader")
-endif(ICUB_USE_GTK2)
-
-else()
-    message(STATUS " icub-firmware-shared library was not found, disabling canLoader")
+if(NOT ICUB_USE_icub_firmware_shared)
+  message(STATUS "icub-firmware-shared not selected, disabling canLoader")
+  return()
 endif()
+
+message(STATUS " +++ tool compiling canLoaderLib")
+add_subdirectory(canLoaderLib)
+
+message(STATUS " +++ tool compiling canLoader-console")
+add_subdirectory(canLoader-console)
+
+
+if(NOT ICUB_USE_GTK2)
+  message(STATUS "GTK2 not selected, skipping canLoader")
+  return()
+endif()
+
+message(STATUS " +++ tool compiling canLoader")
+add_subdirectory(canLoader)
