adapted for new changes in icub-firmware-shared

--- a/src/libraries/icubmod/embObjLib/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjLib/CMakeLists.txt
@@ -60,6 +60,7 @@ set(NVS_SOURCE              ${NVS_MC_SRC_FOLDER}/EoProtocol.c
                             ${NVS_MC_SRC_FOLDER}/EoProtocolEPs.c
                             ${PROT_FOLDER}/icub/EoError.c
                             ${PROT_FOLDER}/icub/EoBoards.c
+                            ${PROT_FOLDER}/icub/EoMotionControl.c
                             ${PROT_FOLDER}/icub/EoAnalogSensors.c
                             ${PROT_FOLDER}/icub/EoManagement.c
                             )
