removed unnecessary dependency from GSL

--- a/src/modules/cartesianInterfaceControl/CMakeLists.txt
+++ b/src/modules/cartesianInterfaceControl/CMakeLists.txt
@@ -3,14 +3,9 @@
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 # 
 
-SET(PROJECTNAME cartesianInterfaceControl)
-PROJECT(${PROJECTNAME})
-
-SET(folder_source main.cpp)
-SOURCE_GROUP("Source Files" FILES ${folder_source})
-
-INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
-ADD_EXECUTABLE(${PROJECTNAME} ${folder_source})
-TARGET_LINK_LIBRARIES(${PROJECTNAME} ${GSL_LIBRARIES} ${YARP_LIBRARIES})
-INSTALL(TARGETS ${PROJECTNAME} DESTINATION bin)
+project(cartesianInterfaceControl)
+include_directories(${YARP_INCLUDE_DIRS})
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES})
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
