removed unnecessary dependency from GSL

--- a/src/modules/actionsRenderingEngine/CMakeLists.txt
+++ b/src/modules/actionsRenderingEngine/CMakeLists.txt
@@ -20,11 +20,10 @@ source_group("Header Files" FILES ${folder_header})
 
 include_directories(${PROJECT_SOURCE_DIR}/include ${YARP_INCLUDE_DIRS}
                     ${iKin_INCLUDE_DIRS} ${actionPrimitives_INCLUDE_DIRS}
-                    ${OpenCV_INCLUDE_DIRS} ${GSL_INCLUDE_DIRS})
+                    ${OpenCV_INCLUDE_DIRS})
 
 add_executable(${PROJECTNAME} ${folder_header} ${folder_source})
-target_link_libraries(${PROJECTNAME} iKin actionPrimitives ${OpenCV_LIBRARIES}
-                      ${GSL_LIBRARIES} ${YARP_LIBRARIES})
+target_link_libraries(${PROJECTNAME} iKin actionPrimitives ${OpenCV_LIBRARIES} ${YARP_LIBRARIES})
 
 install(TARGETS ${PROJECTNAME} DESTINATION bin)
 
